Dynamic neighbour-joining (#42)
* wip

* wip

* wip

* wip woah dude

* wip

* working state

* heuristic results just a little different

* assumption violated!

* found one bug, but assumptions still violated

* correct behaviour

* z is best?

* working, long form

* much simplified

* setup for optimisation

* optimise

* freeze heuristic

* dynamic working and optimised

* dynamic working and further optimised

* comment

* drop heuristic

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -47,6 +47,25 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "42ec4643-a6be-4b8d-8e4d-fb4d7c6140b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.55 ms ± 172 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r1000 -n1\n",
+    "anjl.dynamic_nj(small_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -54,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.29 ms ± 193 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.36 ms ± 307 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -65,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -73,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.76 ms ± 152 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.78 ms ± 141 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -92,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -102,7 +121,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "ebf1c642-1fa3-4047-a981-ddcd7afdf76c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 ms ± 666 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r500 -n1\n",
+    "anjl.dynamic_nj(medium_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -123,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.6 ms ± 1.47 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "34 ms ± 3.66 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -134,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -142,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.3 ms ± 1.15 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.6 ms ± 873 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -161,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -171,7 +209,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -192,7 +230,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.86 s ± 18.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "323 ms ± 14.8 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r20 -n1\n",
+    "anjl.dynamic_nj(large_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.92 s ± 61.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -203,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -211,7 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.28 s ± 38.8 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "6.39 s ± 160 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -230,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -240,7 +297,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,14 +310,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49d154101a1d42d790f786700a61a9ae",
+       "model_id": "b8e962fe62d44e5e8b17fb0903778b7f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5866 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.72 s, sys: 22 ms, total: 1.74 s\n",
+      "Wall time: 1.73 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d03fdca2-2c6e-4389-ad3c-0bb84eb6ce16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62dba63f68064bd59eb4e60738779ea5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,8 +366,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.4 s, sys: 210 ms, total: 19.6 s\n",
-      "Wall time: 19.5 s\n"
+      "CPU times: user 19.2 s, sys: 272 ms, total: 19.5 s\n",
+      "Wall time: 19.4 s\n"
      ]
     }
    ],
@@ -329,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -339,7 +430,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,14 +443,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc5e67207a7548b9a5b9b4e9438922c7",
+       "model_id": "ed64cba72d824ec08de3c2657449087e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8823 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5.18 s, sys: 54 ms, total: 5.23 s\n",
+      "Wall time: 5.2 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xxl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d745ce2da5624294866f22e80053d0ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,8 +499,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 3s, sys: 478 ms, total: 1min 3s\n",
-      "Wall time: 1min 3s\n"
+      "CPU times: user 1min 4s, sys: 545 ms, total: 1min 5s\n",
+      "Wall time: 1min 5s\n"
      ]
     }
    ],
@@ -386,10 +511,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45e7602335714d03a2029db835728fc9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8824 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min 58s, sys: 241 ms, total: 2min 58s\n",
+      "Wall time: 2min 57s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "anjl.canonical_nj(xxl_D, progress=tqdm);"
