--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "95612ea7-0860-4649-b1e0-e2cc22c7a529",
+   "metadata": {},
+   "source": [
+    "# Plotting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "864df6fb-3976-4e02-a9d6-bba8cfd709cd",
@@ -13,6 +21,7 @@
     "from scipy.spatial.distance import squareform\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from plotly.subplots import make_subplots\n",
     "\n",
     "plotly.io.renderers.default = \"plotly_mimetype+notebook_connected\""
    ]
@@ -28,23 +37,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f1bbc17-6d22-4f1b-a97a-9e6e8db96387",
+   "id": "ff9823e8-a955-41e2-8cbd-14c2cb2144de",
    "metadata": {},
    "outputs": [],
    "source": [
     "D1, _ = anjl.data.example_1()\n",
-    "Z1 = anjl.canonical_nj(D1)\n",
-    "Z1"
+    "D1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73ac0689-182a-4e86-8a1a-3515631fe0ca",
+   "id": "089473fd-ff21-4811-93d7-15d2009d6635",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(anjl.to_string(Z1))"
+    "Z1d = anjl.dynamic_nj(D1)\n",
+    "Z1d"
    ]
   },
   {
@@ -61,71 +70,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e00bf2b-4231-4574-8839-b37b43ea351b",
+   "id": "8181afed-6929-44fc-b939-c9eb4caa172d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(anjl.to_string(Z1r))"
+    "Z1 = anjl.canonical_nj(D1)\n",
+    "Z1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "668c7ecb-26cd-4ec4-80ca-e4b2fade6196",
+   "id": "498e1f06-d95c-4475-ba2d-08b1e606d856",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_internal_nodes, df_leaf_nodes, df_edges = anjl.layout_equal_angle(Z=Z1)"
+    "print(anjl.to_string(Z1d))\n",
+    "print(anjl.to_string(Z1r))\n",
+    "print(anjl.to_string(Z1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d125ca06-f49c-4ed3-976b-0743e79f9038",
+   "id": "2fd8f499-5e6a-4631-b164-bae20dd09a76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_leaf_nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6bf7df0-c063-4608-9efc-2cb74faec438",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_internal_nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5701bf9-03d8-44f4-8b18-74c6dc815717",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_edges"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c2f339f-38f7-4808-8de3-c8b25fa2df9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.plot(Z1, marker_size=5, internal_marker_size=5, width=400, height=400)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "512ac01b-47c5-49a8-a329-147aaa288b3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.plot(Z1r, marker_size=5, internal_marker_size=5, width=400, height=400)"
+    "figd = anjl.plot(Z1d, marker_size=5, internal_marker_size=5)\n",
+    "figr = anjl.plot(Z1r, marker_size=5, internal_marker_size=5)\n",
+    "figc = anjl.plot(Z1, marker_size=5, internal_marker_size=5)\n",
+    "figures = [figc, figr, figd]\n",
+    "fig = make_subplots(\n",
+    "    rows=1,\n",
+    "    cols=len(figures),\n",
+    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
+    ")\n",
+    "for i, figure in enumerate(figures):\n",
+    "    for trace in range(len(figure[\"data\"])):\n",
+    "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
+    "fig.update_layout(showlegend=False, height=450, width=1100)\n",
+    "fig"
    ]
   },
   {
@@ -145,36 +132,6 @@
     "    columns=[\"name\", \"fruit\", \"vegetable\", \"animal\", \"car\"],\n",
     ")\n",
     "ld1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2c6db09-252d-4d97-9438-c0029c1d53e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.map_internal_to_leaves(Z1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb618075-c3c0-4246-a923-65ae532124ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.paint_internal(Z1, ld1[\"fruit\"].values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a2a712a-f025-474d-90a1-948322e3a694",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.paint_internal(Z1, ld1[\"car\"].values)"
    ]
   },
   {
@@ -247,84 +204,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b63536cf-29d5-4780-ae6b-d014a8f91de5",
+   "id": "65cdf669-4a98-4208-8447-de76c90cef0f",
    "metadata": {},
    "outputs": [],
    "source": [
     "D2, _ = anjl.data.wikipedia_example()\n",
-    "Z2 = anjl.canonical_nj(D2)\n",
-    "Z2"
+    "D2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52b5b6fc-aa55-43f4-ac46-f031b34c58db",
+   "id": "15ba2fbb-71ae-4906-8c91-680b1bac7908",
    "metadata": {},
    "outputs": [],
    "source": [
+    "Z2d = anjl.dynamic_nj(D2)\n",
+    "Z2r = anjl.rapid_nj(D2)\n",
+    "Z2 = anjl.canonical_nj(D2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "589b3446-080b-4991-9358-48aadd29263f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(anjl.to_string(Z2d))\n",
+    "print(anjl.to_string(Z2r))\n",
     "print(anjl.to_string(Z2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f00287-6477-45b6-a217-a84cb8bfb002",
+   "id": "491052df-7b8e-4210-8f0d-3e829de8d164",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z2r = anjl.rapid_nj(D2)\n",
-    "Z2r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fcec992-d137-490d-b910-c613f5ae5c90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(anjl.to_string(Z2r))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84f2946c-68e0-4c96-94ea-f80095766375",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.map_internal_to_leaves(Z2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "954dc15f-7107-461b-b40d-0162564c0e86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.map_internal_to_leaves(Z2r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0c014da-5e74-45a5-976e-59f189f2310e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.plot(Z=Z2, line_width=2, marker_size=20, internal_marker_size=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0198ae50-ac38-4798-94fc-d1b7de11a662",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.plot(Z=Z2r, line_width=2, marker_size=20, internal_marker_size=5)"
+    "figd = anjl.plot(Z2d, marker_size=5, internal_marker_size=5)\n",
+    "figr = anjl.plot(Z2r, marker_size=5, internal_marker_size=5)\n",
+    "figc = anjl.plot(Z2, marker_size=5, internal_marker_size=5)\n",
+    "figures = [figc, figr, figd]\n",
+    "fig = make_subplots(\n",
+    "    rows=1,\n",
+    "    cols=len(figures),\n",
+    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
+    ")\n",
+    "for i, figure in enumerate(figures):\n",
+    "    for trace in range(len(figure[\"data\"])):\n",
+    "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
+    "fig.update_layout(showlegend=False, height=450, width=1100)\n",
+    "fig"
    ]
   },
   {
@@ -338,62 +272,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "157ff545-38e6-4f74-af8e-cd7ceac3ee47",
+   "id": "121b2346-4602-4499-8f76-76be9bf8d3c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ld3 = pd.read_csv(\"../benchmark/small/samples.csv\")\n",
-    "ld3.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7e91ed2-7434-4ffd-acb3-6e6fbe9c266e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "small = zarr.load(\"../benchmark/small/dist.zarr.zip\")\n",
-    "D3 = squareform(small)\n",
+    "D3, ld3 = anjl.data.mosquitoes()\n",
+    "loc_shuffle = np.random.choice(D3.shape[0], size=D3.shape[0], replace=False)\n",
+    "D3 = D3.take(loc_shuffle, axis=0).take(loc_shuffle, axis=1)\n",
+    "ld3 = ld3.iloc[loc_shuffle].reset_index(drop=True)\n",
     "D3.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359b6cf3-7833-460a-b5e8-ddd96f3103a2",
+   "id": "82b55dc5-38ed-49e3-bebe-ef2d3748f365",
    "metadata": {},
    "outputs": [],
    "source": [
+    "Z3d = anjl.dynamic_nj(D3)\n",
+    "Z3r = anjl.rapid_nj(D3)\n",
     "Z3 = anjl.canonical_nj(D3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2289b84c-302d-445e-b392-44ccc90826f0",
+   "id": "4424e7a4-2a94-4b7a-ae06-dead92edbe38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z3r = anjl.rapid_nj(D3)"
+    "color = \"taxon\"\n",
+    "params3 = dict(\n",
+    "    line_width=1,\n",
+    "    marker_size=4,\n",
+    "    count_sort=True,\n",
+    "    color=color,\n",
+    "    hover_name=\"sample_id\",\n",
+    "    leaf_data=ld3,\n",
+    "    category_orders={color: np.unique(ld3[color])},\n",
+    "    render_mode=\"svg\",\n",
+    ")\n",
+    "figd = anjl.plot(Z3d, **params3)\n",
+    "figr = anjl.plot(Z3r, **params3)\n",
+    "figc = anjl.plot(Z3, **params3)\n",
+    "figures = [figc, figr, figd]\n",
+    "fig = make_subplots(\n",
+    "    rows=1,\n",
+    "    cols=len(figures),\n",
+    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
+    ")\n",
+    "for i, figure in enumerate(figures):\n",
+    "    for trace in range(len(figure[\"data\"])):\n",
+    "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
+    "fig.update_layout(showlegend=False, height=450, width=1100)\n",
+    "fig"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f1879b7-50b4-4e43-a169-762c62f8055a",
+   "id": "fd955ed4-5bd2-4e36-bad3-895e4d88b811",
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
-    "    Z3,\n",
-    "    line_width=1,\n",
-    "    marker_size=8,\n",
-    "    count_sort=True,\n",
-    "    color=\"taxon\",\n",
-    "    hover_name=\"sample_id\",\n",
-    "    leaf_data=ld3,\n",
-    ")"
+    "fig = anjl.plot(Z3d, **params3)\n",
+    "fig.update_layout(title=\"Dynamic\")\n",
+    "fig"
    ]
   },
   {
@@ -403,15 +350,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
-    "    Z3r,\n",
-    "    line_width=1,\n",
-    "    marker_size=8,\n",
-    "    count_sort=True,\n",
-    "    color=\"taxon\",\n",
-    "    hover_name=\"sample_id\",\n",
-    "    leaf_data=ld3,\n",
-    ")"
+    "fig = anjl.plot(Z3r, **params3)\n",
+    "fig.update_layout(title=\"Rapid\")\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f1879b7-50b4-4e43-a169-762c62f8055a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = anjl.plot(Z3, **params3)\n",
+    "fig.update_layout(title=\"Canonical\")\n",
+    "fig"
    ]
   },
   {
@@ -425,100 +378,200 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f225ba6b-793d-4c52-bb2d-b5d9c68489ba",
+   "id": "fd60df37-ad47-4bc6-b077-277943db4862",
    "metadata": {},
    "outputs": [],
    "source": [
     "ld4 = pd.read_csv(\"../benchmark/medium/samples.csv\")\n",
-    "ld4.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acfb36fc-f19c-4959-9382-728017534961",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "medium = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
     "D4 = squareform(medium)\n",
+    "loc_shuffle = np.random.choice(D4.shape[0], size=D4.shape[0], replace=False)\n",
+    "D4 = D4.take(loc_shuffle, axis=0).take(loc_shuffle, axis=1)\n",
+    "ld4 = ld4.iloc[loc_shuffle].reset_index(drop=True)\n",
     "D4.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c059f48-6024-470b-9a28-9b22c5e881fe",
+   "id": "b69c7852-5922-4654-b610-1b97c2aeb5ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z4 = anjl.canonical_nj(D4)\n",
-    "Z4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d14e789-4872-47ae-a0e9-412566849c0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Z4d = anjl.dynamic_nj(D4)\n",
     "Z4r = anjl.rapid_nj(D4)\n",
-    "Z4r"
+    "Z4 = anjl.canonical_nj(D4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03cee5e1-7bee-4106-ba82-6895f3c0adb2",
+   "id": "d91a22b0-cc87-42cc-8cea-19df6d1881bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
-    "    Z4,\n",
+    "color = \"taxon\"\n",
+    "params4 = dict(\n",
     "    line_width=0.5,\n",
-    "    marker_size=5,\n",
-    "    width=800,\n",
-    "    height=700,\n",
-    "    leaf_data=ld4,\n",
-    "    color=\"taxon\",\n",
+    "    marker_size=3,\n",
+    "    count_sort=True,\n",
+    "    color=color,\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
-    ")"
+    "    leaf_data=ld4,\n",
+    "    category_orders={color: np.unique(ld4[color])},\n",
+    "    render_mode=\"svg\",\n",
+    ")\n",
+    "figd = anjl.plot(Z4d, **params4)\n",
+    "figr = anjl.plot(Z4r, **params4)\n",
+    "figc = anjl.plot(Z4, **params4)\n",
+    "figures = [figc, figr, figd]\n",
+    "fig = make_subplots(\n",
+    "    rows=1,\n",
+    "    cols=len(figures),\n",
+    "    subplot_titles=[\"Canonical\", \"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
+    ")\n",
+    "for i, figure in enumerate(figures):\n",
+    "    for trace in range(len(figure[\"data\"])):\n",
+    "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
+    "fig.update_layout(showlegend=False, height=450, width=1100)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87e1e3df-413b-4a58-a5d5-9af6d71029bb",
+   "metadata": {},
+   "source": [
+    "## Example 5 (large)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e756506e-9057-4e7c-aa16-cae0a625b6d3",
+   "id": "20f7b5c5-6bb2-4c2d-9b44-42e5b08df9df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
-    "    Z4r,\n",
-    "    line_width=0.5,\n",
-    "    marker_size=5,\n",
-    "    width=800,\n",
-    "    height=700,\n",
-    "    leaf_data=ld4,\n",
-    "    color=\"taxon\",\n",
-    "    hover_name=\"sample_id\",\n",
-    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
-    ")"
+    "ld5 = pd.read_csv(\"../benchmark/large/samples.csv\")\n",
+    "large = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
+    "D5 = squareform(large)\n",
+    "loc_shuffle = np.random.choice(D5.shape[0], size=D5.shape[0], replace=False)\n",
+    "D5 = D5.take(loc_shuffle, axis=0).take(loc_shuffle, axis=1)\n",
+    "ld5 = ld5.iloc[loc_shuffle].reset_index(drop=True)\n",
+    "\n",
+    "Z5d = anjl.dynamic_nj(D5)\n",
+    "Z5r = anjl.rapid_nj(D5)\n",
+    "\n",
+    "D5.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b13e8f8-52d0-4000-a42b-bc2f25958f7a",
+   "id": "6a5b2ea7-547e-4f9b-a321-25fdcaceec3a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "color = \"taxon\"\n",
+    "params5 = dict(\n",
+    "    line_width=0.5,\n",
+    "    marker_size=3,\n",
+    "    count_sort=True,\n",
+    "    color=color,\n",
+    "    hover_name=\"sample_id\",\n",
+    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    "    leaf_data=ld5,\n",
+    "    category_orders={color: np.unique(ld5[color])},\n",
+    "    render_mode=\"svg\",\n",
+    ")\n",
+    "figd = anjl.plot(Z5d, **params5)\n",
+    "figr = anjl.plot(Z5r, **params5)\n",
+    "figures = [figr, figd]\n",
+    "fig = make_subplots(\n",
+    "    rows=1,\n",
+    "    cols=len(figures),\n",
+    "    subplot_titles=[\"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
+    ")\n",
+    "for i, figure in enumerate(figures):\n",
+    "    for trace in range(len(figure[\"data\"])):\n",
+    "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
+    "fig.update_layout(showlegend=False, height=500, width=900)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03ee9510-b7cd-4ec6-b015-f46dc0480351",
+   "metadata": {},
+   "source": [
+    "## Example 6 (XL)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75583a88-7a39-4f26-a1bf-b689787de2f8",
+   "id": "3b851e85-05fe-49f1-b512-702271536df4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ld6 = pd.read_csv(\"../benchmark/xl/samples.csv\")\n",
+    "large = zarr.load(\"../benchmark/xl/dist.zarr.zip\")\n",
+    "D6 = squareform(large)\n",
+    "loc_shuffle = np.random.choice(D6.shape[0], size=D6.shape[0], replace=False)\n",
+    "D6 = D6.take(loc_shuffle, axis=0).take(loc_shuffle, axis=1)\n",
+    "ld6 = ld6.iloc[loc_shuffle].reset_index(drop=True)\n",
+    "\n",
+    "Z6d = anjl.dynamic_nj(D6)\n",
+    "Z6r = anjl.rapid_nj(D6)\n",
+    "\n",
+    "D6.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c935e4e-dc50-4fef-89de-847dda43d160",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "color = \"taxon\"\n",
+    "params6 = dict(\n",
+    "    line_width=0.5,\n",
+    "    marker_size=3,\n",
+    "    count_sort=True,\n",
+    "    color=color,\n",
+    "    hover_name=\"sample_id\",\n",
+    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    "    leaf_data=ld6,\n",
+    "    category_orders={color: np.unique(ld6[color])},\n",
+    "    render_mode=\"auto\",\n",
+    ")\n",
+    "figd = anjl.plot(Z6d, **params6)\n",
+    "figr = anjl.plot(Z6r, **params6)\n",
+    "figures = [figr, figd]\n",
+    "fig = make_subplots(\n",
+    "    rows=1,\n",
+    "    cols=len(figures),\n",
+    "    subplot_titles=[\"Rapid\", \"Dynamic\"],\n",
+    "    horizontal_spacing=0.02,\n",
+    "    vertical_spacing=0.02,\n",
+    ")\n",
+    "for i, figure in enumerate(figures):\n",
+    "    for trace in range(len(figure[\"data\"])):\n",
+    "        fig.append_trace(figure[\"data\"][trace], row=1, col=i + 1)\n",
+    "fig.update_layout(showlegend=False, height=500, width=900)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46a72ccc-3a7e-454a-ae54-d6153859720f",
    "metadata": {},
    "outputs": [],
    "source": []
