canonical condensed implementation done

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -39,8 +39,8 @@
     }
    ],
    "source": [
-    "small = zarr.load(\"../benchmark/small/dist.zarr.zip\")\n",
-    "small_D = squareform(small)\n",
+    "small_dist = zarr.load(\"../benchmark/small/dist.zarr.zip\")\n",
+    "small_D = squareform(small_dist)\n",
     "small_D.shape"
    ]
   },
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.55 ms ± 172 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.54 ms ± 106 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.36 ms ± 307 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.48 ms ± 388 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -92,13 +92,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.78 ms ± 141 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.05 ms ± 157 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
-    "anjl.canonical_nj(small_D)"
+    "anjl.canonical_nj(small_dist)"
    ]
   },
   {
@@ -127,8 +127,8 @@
     }
    ],
    "source": [
-    "medium = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
-    "medium_D = squareform(medium)\n",
+    "medium_dist = zarr.load(\"../benchmark/medium/dist.zarr.zip\")\n",
+    "medium_D = squareform(medium_dist)\n",
     "medium_D.shape"
    ]
   },
@@ -142,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 ms ± 666 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "7.07 ms ± 518 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34 ms ± 3.66 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "35.8 ms ± 957 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -180,13 +180,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.6 ms ± 873 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "24.4 ms ± 758 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r200 -n1\n",
-    "anjl.canonical_nj(medium_D)"
+    "anjl.canonical_nj(medium_dist)"
    ]
   },
   {
@@ -215,8 +215,8 @@
     }
    ],
    "source": [
-    "large = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
-    "large_D = squareform(large)\n",
+    "large_dist = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
+    "large_D = squareform(large_dist)\n",
     "large_D.shape"
    ]
   },
@@ -230,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "323 ms ± 14.8 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "326 ms ± 24.1 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.92 s ± 61.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "2.91 s ± 16.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -268,13 +268,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.39 s ± 160 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "7.72 s ± 41.7 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -r5 -n1\n",
-    "anjl.canonical_nj(large_D)"
+    "%%timeit -r3 -n1\n",
+    "anjl.canonical_nj(large_dist)"
    ]
   },
   {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -297,27 +297,27 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xl = zarr.load(\"../benchmark/xl/dist.zarr.zip\")\n",
-    "xl_D = squareform(xl)\n",
+    "xl_dist = zarr.load(\"../benchmark/xl/dist.zarr.zip\")\n",
+    "xl_D = squareform(xl_dist)\n",
     "xl_D.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8e962fe62d44e5e8b17fb0903778b7f",
+       "model_id": "df68c1e698dd4eada1275c1a67dcfd7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,8 +332,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.72 s, sys: 22 ms, total: 1.74 s\n",
-      "Wall time: 1.73 s\n"
+      "CPU times: user 1.67 s, sys: 26.9 ms, total: 1.7 s\n",
+      "Wall time: 1.69 s\n"
      ]
     }
    ],
@@ -344,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "d03fdca2-2c6e-4389-ad3c-0bb84eb6ce16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62dba63f68064bd59eb4e60738779ea5",
+       "model_id": "1db303b5470b4e759985b7271c2c6061",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,8 +366,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.2 s, sys: 272 ms, total: 19.5 s\n",
-      "Wall time: 19.4 s\n"
+      "CPU times: user 19.1 s, sys: 249 ms, total: 19.3 s\n",
+      "Wall time: 19.2 s\n"
      ]
     }
    ],
@@ -378,14 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1a386140c5040d1a990503afcd075fb",
+       "model_id": "20991b804c7e4b079b07f3985c7336aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,14 +400,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 49 s, sys: 84 ms, total: 49.1 s\n",
-      "Wall time: 48.9 s\n"
+      "CPU times: user 1min 24s, sys: 122 ms, total: 1min 24s\n",
+      "Wall time: 1min 24s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.canonical_nj(xl_D, progress=tqdm);"
+    "anjl.canonical_nj(xl_dist, progress=tqdm);"
    ]
   },
   {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed64cba72d824ec08de3c2657449087e",
+       "model_id": "61cfdde780e64d4b9ce986b2630bdef2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,8 +465,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.18 s, sys: 54 ms, total: 5.23 s\n",
-      "Wall time: 5.2 s\n"
+      "CPU times: user 5.02 s, sys: 43 ms, total: 5.06 s\n",
+      "Wall time: 5.03 s\n"
      ]
     }
    ],
@@ -477,14 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d745ce2da5624294866f22e80053d0ac",
+       "model_id": "0f9335d71e6d4285bcedb02f22b18d35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,7 +499,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 4s, sys: 545 ms, total: 1min 5s\n",
+      "CPU times: user 1min 5s, sys: 568 ms, total: 1min 5s\n",
       "Wall time: 1min 5s\n"
      ]
     }
@@ -507,40 +507,6 @@
    "source": [
     "%%time\n",
     "anjl.rapid_nj(xxl_D, progress=tqdm);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45e7602335714d03a2029db835728fc9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/8824 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 2min 58s, sys: 241 ms, total: 2min 58s\n",
-      "Wall time: 2min 57s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "anjl.canonical_nj(xxl_D, progress=tqdm);"
    ]
   },
   {
